# docs-as-code

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_mermaid_diagram.py
docs/: index.md
docs_as_code/: components.md  main.py
tests/: test_main.py  test_mermaid_diagram.py
tests/test_data/: generate_reports_dm.md  test_terraform.tf
tests/test_data/meta/: Reporting-Framework.md  airflow_example.py  data.py  document.py  framework.py
tests/test_data/meta/Reporting-Framework/: .order  Report-Creation-Workflow.md  Top%2Dlevel-Request-Workflow.md
