[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docs_as_code"
version = "0.0.1"
dependencies = [
  "pytest",
  "pandas",
]
authors = [
  { name="Zach Hafen-Saavedra", email="z.hafen.saavedra@gmail.com" },
]
description = "A package for documentation as code."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]